# Chess-implementation-in-CPlusPlus

./: Opis projekta.docx  README.md  opis_projekta.docx
Projekat/: CMakeLists.txt
Projekat/Chess/Figure/: figura.cpp  figura.h  kralj.cpp  kralj.h  kraljica.cpp  kraljica.h  lovac.cpp  lovac.h  pijun.cpp  pijun.h  skakac.cpp  skakac.h  top.cpp  top.h
Projekat/Chess/Igra/: main.cpp  polje.cpp  polje.h  potez.cpp  potez.h  tabla.cpp  tabla.h
Projekat/Chess/Izuzeci/: igrac_nije_na_potezu_exception.h  nevalidan_potez_exception.h  potez_izvan_table_exception.h  prazno_polje_exception.h
